# ifmo_csa_lab3_rust

./: Cargo.toml  README.md  clippy.toml  template.md
.github/workflows/: rust.yml
examples/: hello.asm  hello_user_name.asm
src/: isa.rs  lib.rs  machine.rs  translator.rs
src/isa/: instructions.rs  mod.rs
src/machine/: control_unit.rs  datapath.rs  mod.rs
src/translator/: mod.rs  tokens.rs
tests/: integration.rs
tests/inputs/: 2.yml  cat.yml  hello.yml  hello_user_name.yml  prob2.yml
tests/snapshots/: integration__test@cat.yml.snap  integration__test@hello.yml.snap  integration__test@hello_user_name.yml.snap  integration__test@prob2.yml.snap
