[package]
name = "lab3-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
thiserror = "1.0.50"

[dev-dependencies]
gag = "1.0.0"
insta = { version = "1.34.0", features = ["ron", "glob"] }
serde = {version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tempfile = "3.8.1"
