[package]
name = "lab3-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.50"
ron = "0.8"
serde = {version = "1.0.192", features = ["derive"] }


[dev-dependencies]
gag = "1.0.0"
insta = { version = "1.34.0", features = ["glob"] }
serde_yaml = "0.9.27"
tempfile = "3.8.1"
